--- a/cloud/.firebaserc
+++ b/cloud/.firebaserc
@@ -1,7 +1,7 @@
 {
   "projects": {
-    "default": "deckdeckgo-studio-prod",
-    "staging": "deckdeckgo-studio-staging",
-    "dev": "deckdeckgo-studio-beta"
+    "default": "deckdeckgo-studio-c694b",
+    "staging": "deckdeckgo-studio-c694b",
+    "dev": "deckdeckgo-studio-c694b"
   }
 }
