--- a/remote/.firebaserc
+++ b/remote/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "deckdeckgo-studio-c694b",
-    "staging": "deckdeckgo-studio-c694b"
+    "default": "deckdeckgo-studio-ce04b",
+    "staging": "deckdeckgo-studio-ce04b"
   }
 }
