--- a/.github/workflows/cloud.yml
+++ b/.github/workflows/cloud.yml
@@ -10,19 +10,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@master
+        uses: actions/checkout@v3
       - name: Set Node version
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18'
       - name: Install Dependencies
         run: npm ci
         working-directory: ./cloud/functions
+      - name: Setup Firebase CLI
+        run: npm install -g firebase-tools
       - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
-        with:
-          args: deploy --only functions
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          PROJECT_ID: 'default'
-          PROJECT_PATH: './cloud'
+        run: |
+          echo '${{ secrets.FIREBASE_TOKEN }}' > $HOME/gcp-key.json
+          export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json
+          firebase deploy --only functions --project deckdeckgo-ce04b
+        working-directory: ./cloud
