--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,10 +6,11 @@ on:
       - main
     paths:
       - 'docs/**'
+  workflow_dispatch:
 
 jobs:
   build:
-    name: Build
+    name: Build and Deploy Docs
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
