--- a/.github/workflows/cloud.yml
+++ b/.github/workflows/cloud.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Install Dependencies
         run: npm ci
         working-directory: ./cloud/functions
-      - name: Setup Firebase CLI
-        run: npm install -g firebase-tools
+      - name: Setup Firebase CLI (compatible version)
+        run: npm install -g firebase-tools@11.30.0
       - name: Deploy to Firebase
         run: |
           echo '${{ secrets.FIREBASE_TOKEN }}' > $HOME/gcp-key.json
