--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build
         run: npm run build
         working-directory: ./docs
-      - name: Setup Firebase CLI
-        run: npm install -g firebase-tools
+      - name: Setup Firebase CLI (compatible version)
+        run: npm install -g firebase-tools@11.30.0
       - name: Deploy to Firebase
         run: |
           echo '${{ secrets.FIREBASE_TOKEN }}' > $HOME/gcp-key.json
