--- a/.github/workflows/cloud.yml
+++ b/.github/workflows/cloud.yml
@@ -21,9 +21,15 @@ jobs:
         working-directory: ./cloud/functions
       - name: Setup Firebase CLI (compatible version)
         run: npm install -g firebase-tools@11.30.0
+      - name: Authenticate with Firebase
+        run: |
+          echo '${{ secrets.FIREBASE_TOKEN }}' > $HOME/gcp-key.json
+          export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json
+          firebase projects:list
       - name: Deploy to Firebase
         run: |
           echo '${{ secrets.FIREBASE_TOKEN }}' > $HOME/gcp-key.json
           export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json
-          firebase deploy --only functions --project deckdeckgo-ce04b
+          firebase use deckdeckgo-ce04b
+          firebase deploy --only functions
         working-directory: ./cloud
